@@ -16,6 +16,7 @@ CURRENT VERSION:
 1.2.0
 
 	better support for hi-res windows (no more blurry text)
+	right click to get maps by same author works better
 	MapEditor: more information shown when publishing new map
 	MapEditor: action buttons affect only selected countries
 	MapEditor: better (cross OS) filename validation for saving maps
